# legacy-itslib-library

./: CMakeLists.txt  Finditslib.cmake  Makefile  README.md
cmake_find/: Findopenssl.cmake
include/itslib/: FileFunctions.h  debug.h  ptrutils.h  stringutils.h  utfcvutils.h  vectorutils.h
include/itslib/compress/: compressor.h  zlib.h  zliballoc.h  zliberr.h
include/itslib/crypto/: devrandom.h
include/itslib/http/: headers.h  query.h  request.h  utils.h
include/itslib/sockets/: selectloop.h  signalstate.h  socketstate.h  socks4state.h  sslsocket.h  sslstate.h  tcpsocket.h  tcpstate.h
include/itslib/util/: HiresTimer.h  atomicoperations.h  circularbuffer.h  exceptdef.h  hexdump.h  logmsg.h  pollloop.h  process.h  queuebuf.h  singleton.h  stream.h  ungetqueue.h  wintypes.h
include/itslib/util/rw/: BlockDevice.h  CompressedReader.h  MmapReader.h
src/: FileFunctions.cpp  stringutils.cpp  utfcvutils.cpp  vectorutils.cpp
